--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a::before{
 #button{
     display: inline-block;
     background-color: #3D5A73;
-   padding: 18px 20px;
+    padding: 18px 20px;
     box-shadow: 5px 5px 0px #000;
     margin-right: 0;
 }
@@ -63,3 +63,31 @@ a::before{
     border-radius: 20px;
     
 }
+
+h1{
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 40px;
+    color: #F25A70;
+    text-shadow: 4px 4px 0px #000000;
+}
+
+/*
+h2{
+    font-family: 'Press Start 2P';
+    font-size: 30px;
+    color: #fff;
+    text-shadow: 4px 4px 0px #000000;
+    
+}
+
+
+.button{
+    color: #000;
+    display: inline-block;
+    background-color: #F25A70;
+    padding: 18px 20px;
+    box-shadow: 5px 5px 0px #000;
+
+}
+*/
+
